--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,5 +10,13 @@
           <a class="nav-link" href="/campgrounds">Campgrounds</a>
           <a class="nav-link" href="/campgrounds/new">New Campground</a>          </div>
       </div>
+      <div class="navbar-nav">
+        <% if(!currentUser){%> 
+        <a href="/login" class="nav-link">Log In</a>
+        <a href="/register" class="nav-link">Sign In</a>
+        <% }else{ %> 
+        <a href="/logout" class="nav-link">Log Out</a>
+        <% } %> 
+      </div>
     </div>
   </nav>
