--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-2">
                  <label class="form-label" for="title">Title</label>
                  <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -18,12 +18,17 @@
                  </div>
             </div>
             <div class="mb-3">
+                <label for="image" class="form-label">Choose Images</label>
+                <input class="form-control" name="image" type="file" id="formFile" multiple>
+              </div>
+            
+            <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
                 <input class="form-control" type="text" id="image" name="campground[image]" required>
                 <div class="valid-feedback">
                     Looks Good!
                  </div>
-            </div>
+            </div> -->
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group mb-3">
